PR/51673: Carsten Kunze: curses: standend() does not turn off A_BOLD; according the X/Open it needs to turn off all attributes.