libcurses/standout.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: standout.c,v 1.16 2010/02/03 15:34:40 roy Exp $	*/
+/*	$NetBSD: standout.c,v 1.17 2016/11/29 17:33:48 christos Exp $	*/
 
 /*
  * Copyright (c) 1981, 1993, 1994
@@ -82,6 +82,7 @@ wstandout(WINDOW *win)
 int
 wstandend(WINDOW *win)
 {
-	win->wattr &= ~__STANDOUT;
+	// http://pubs.opengroup.org/onlinepubs/7908799/xcurses/wstandend.html
+	win->wattr = __NORMAL;
 	return (1);
 }
